[package]
name = "wakeup-light"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = [
  "defmt",
  "integrated-timers",
  "arch-cortex-m",
  "executor-thread",
] }
embassy-net = { version = "0.4.0", features = [
  "defmt",
  "tcp",
  "dhcpv4",
  "medium-ethernet",
  "dns",
] }
embassy-rp = { version = "0.1.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-time = { version = "0.3.1", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
fixed = "1.27.0"
fixed-macro = "1.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
smart-leds = "0.4.0"
static_cell = "2"

rand = { version = "0.8.5", default-features = false }
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
